--- a/works.html
+++ b/works.html
@@ -89,9 +89,10 @@
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>002/006</h4>
-                      <h3>Nulla scelerisque</h3>
-                      <p>Proin pharetra metus id iaculis dignissim. In aliquet lorem ut ex ullamcorper.</p>
-                      <a href="./work.html" title="" class="btn btn-default">Discover</a>
+                      <h3>Diseño de Interiores</h3>
+                      <p>Website for selling services.</p>
+                      <a href="https://github.com/OscarNarvaez/CreacionDeInteriores.git" title=""
+                        class="btn btn-default" target="_blank">Discover/a>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -100,9 +101,10 @@
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>003/006</h4>
-                      <h3>Vivamus vestibulum</h3>
-                      <p>Fusce sed hendrerit augue, a rhoncus velit. In non lorem mattis, tempor sem sit amet.</p>
-                      <a href="./work.html" title="" class="btn btn-default">Discover</a>
+                      <h3>SPA Center</h3>
+                      <p>Website for selling services.</p>
+                      <a href="https://github.com/OscarNarvaez/Spa-Belleza.git" title="" class="btn btn-default"
+                        target="_blank">Discover</a>
                     </div>
                   </div>
                 </div>
