Corregir etiqueta de cierre enlace en works.html

--- a/works.html
+++ b/works.html
@@ -92,7 +92,7 @@
                       <h3>Diseño de Interiores</h3>
                       <p>Website for selling services.</p>
                       <a href="https://github.com/OscarNarvaez/CreacionDeInteriores.git" title=""
-                        class="btn btn-default" target="_blank">Discover/a>
+                        class="btn btn-default" target="_blank">Discover</a>
                     </div>
                   </div>
                   <div class="col-sm-4">
