Actualiza títulos y números de proyectos

--- a/works.html
+++ b/works.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
   <link href="./assets/favicon.ico" rel="icon">
 
-  <title>Title page</title>
+  <title>Works</title>
 
   <link href="./main.3f6952e4.css" rel="stylesheet">
 </head>
@@ -72,11 +72,11 @@
                 <div class="row">
                   <div class="col-sm-4">
 
-                    <a href="./work.html" title="" class="black-image-project-hover">
+                    <a href="" title="" class="black-image-project-hover">
                       <img src="./assets/images/work01-hover.jpg" alt="" class="img-responsive">
                     </a>
                     <div class="card-container card-container-lg">
-                      <h4>001/006</h4>
+                      <h4>001/003</h4>
                       <h3>TUTOR UNI</h3>
                       <p>Student tutoring platform.</p>
                       <a href="https://github.com/SantJojoa/TutorUni.git" title="" class="btn btn-default"
@@ -84,11 +84,11 @@
                     </div>
                   </div>
                   <div class="col-sm-4">
-                    <a href="./works.html" title="" class="black-image-project-hover">
+                    <a href="" title="" class="black-image-project-hover">
                       <img src="./assets/images/work02-hover.jpg" alt="" class="img-responsive">
                     </a>
                     <div class="card-container card-container-lg">
-                      <h4>002/006</h4>
+                      <h4>002/003</h4>
                       <h3>Diseño de Interiores</h3>
                       <p>Website for selling services.</p>
                       <a href="https://github.com/OscarNarvaez/CreacionDeInteriores.git" title=""
@@ -96,11 +96,11 @@
                     </div>
                   </div>
                   <div class="col-sm-4">
-                    <a href="./works.html" title="" class="black-image-project-hover">
+                    <a href="" title="" class="black-image-project-hover">
                       <img src="./assets/images/work03-hover.jpg" alt="" class="img-responsive">
                     </a>
                     <div class="card-container card-container-lg">
-                      <h4>003/006</h4>
+                      <h4>003/003</h4>
                       <h3>SPA Center</h3>
                       <p>Website for selling services.</p>
                       <a href="https://github.com/OscarNarvaez/Spa-Belleza.git" title="" class="btn btn-default"
