Agregado Django a la lista de frameworks en about.html

--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
                   <h4>
                     Frameworks:
                   </h4>
-                  React | Nodejs
+                  React | Nodejs | Django
                   <h3>3. Passion and Motivation</h3>
                   <p>
                     Passion for creating innovative solutions... programming is not just a job, it's a form of creative
