--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,6 @@
       </div>
     </nav>
   </header>
-
   <div class="section-container">
     <div class="container">
       <div class="row">
@@ -57,65 +56,52 @@
           <div class="section-container-spacer text-center">
             <h1 class="h2">04 : Contact me</h1>
           </div>
-
           <div class="row">
-            <div class="col-md-10 col-md-offset-1">
-              <form action="" class="reveal-content">
-                <div class="row">
-                  <div class="col-md-7">
-                    <div class="form-group">
-                      <input type="email" class="form-control" id="email" placeholder="Email">
-                    </div>
-                    <div class="form-group">
-                      <input type="text" class="form-control" id="subject" placeholder="Subject">
-                    </div>
-                    <div class="form-group">
-                      <textarea class="form-control" rows="5" placeholder="Enter your message"></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-default btn-lg">Send</button>
-                  </div>
-                  <div class="col-md-5 address-container">
-                    <ul class="list-unstyled">
-                      <h4>
-                        <span class="fa-icon">
-                          <i class="fa fa-phone" aria-hidden="true"></i>
-                        </span>
-                        +57 312 214 3679
-                      </h4>
-                      <h4>
-                        <span class="fa-icon">
-                          <i class="fa fa-at" aria-hidden="true"></i>
-                        </span>
-                        julinnarget@gmail.com
-                      </h4>
-                      <h4>
-                        <span class="fa-icon">
-                          <i class="fa fa fa-map-marker" aria-hidden="true"></i>
-                        </span>
-                        Aun es confidencial...
-                        <h2>🤫</h2>
-                      </h4>
-                    </ul>
-                    <a href="https://www.facebook.com/oscar.narvaez.1422" title="" class="fa-icon">
-                      <i class="fa fa-facebook"></i>
-                    </a>
-                    <a href="https://github.com/OscarNarvaez" title="" class="fa-icon">
-                      <i class="fa fa-github"></i>
-                    </a>
-                    <a href="https://www.linkedin.com/in/oscar-julian-narvaez-5b144120b/" title="" class="fa-icon">
-                      <i class="fa fa-linkedin"></i>
-                    </a>
+            <form action="" class="reveal-content">
+              <ul class="list-unstyled">
+                <h3>
+                  <span class="fa-icon">
+                    <i class="fa fa-phone" aria-hidden="true"></i>
+                  </span>
+                  +57 312 214 3679
+                </h3>
+                <h3>
+                  <span class="fa-icon">
+                    <i class="fa fa-at" aria-hidden="true"></i>
+                  </span>
+                  julinnarget@gmail.com
+                </h3>
+                <h3>
+                  <span class="fa-icon">
+                    <i class="fa fa fa-map-marker" aria-hidden="true"></i>
+                  </span>
+                  Aun es confidencial...🤫
+                </h3>
+              </ul>
+              <h2>
+                <a href="https://www.facebook.com/oscar.narvaez.1422" title="" class="fa-icon">
+                  <i class="fa fa-facebook"></i>
+                </a>
+              </h2>
 
-                  </div>
-                </div>
-              </form>
-            </div>
+              <h2>
+                <a href="https://github.com/OscarNarvaez" title="" class="fa-icon">
+                  <i class="fa fa-github"></i>
+                </a>
+              </h2>
 
+              <h2>
+                <a href="https://www.linkedin.com/in/oscar-julian-narvaez-5b144120b/" title="" class="fa-icon">
+                  <i class="fa fa-linkedin"></i>
+                </a>
+              </h2>
           </div>
-
+          </form>
         </div>
       </div>
     </div>
+  </div>
+  </div>
   </div>
 
   <script>
